# ravenbase-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_BACKEND.md  Dockerfile.api  Dockerfile.worker  Makefile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.envs/: .env.example
alembic/: env.py
alembic/versions/: 02ab7e1f0d45_add_data_retention_log.py  05e8c2b1f7d3_add_referral_transactions.py  234dbe10ebe5_initial_schema.py  2b57bb9c7c01_alter_user_id_to_string.py  3a1c9e4f2d80_credits_balance_default_zero.py  6a286e6f5768_add_stripe_customer_id_to_users.py  6c3457d223cc_add_stripe_customer_id_to_users.py  ab9fb0156d8d_add_chat_sessions.py
docs/.bmad/: journal.md  project-status.md  story-counter.txt
docs/components/: README.md
docs/requirements/: functional-requirements.md  test-traceability.md
docs/stories/: epics.md
scripts/: seed_dev_data.py  setup_neo4j.py  setup_qdrant.py
src/adapters/: anthropic_adapter.py  base.py  docling_adapter.py  llm_router.py  moderation_adapter.py  neo4j_adapter.py  openai_adapter.py  presidio_adapter.py  qdrant_adapter.py  storage_adapter.py
src/api/: main.py
src/core/: config.py  credit_costs.py  errors.py  logging.py
src/models/: __init__.py  chat_session.py  conflict.py  credit.py  data_retention_log.py  job_status.py  meta_document.py  profile.py  referral.py  source.py  user.py
src/schemas/: account.py  admin.py  billing.py  chat.py  common.py  conflict.py  credits.py  export.py  graph.py  ingest.py  metadoc.py  profile.py  rag.py  referral.py
tests/: conftest.py
(+117 files in other folders)
